# campello_llm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  TODO.md
.github/workflows/: ci.yml
examples/cli_chat/: CMakeLists.txt  main.cpp
include/campello_llm/: architecture.hpp  chat_template.hpp  generation_config.hpp  gguf_reader.hpp  model.hpp  safetensors_reader.hpp  tokenizer.hpp  tokenizer_config.hpp  version.hpp  weights_file.hpp
src/: campello_llm_config.h.in  model.cpp  version.cpp
src/architecture/: architecture_registry.cpp  gpt_architecture.cpp  llama_architecture.cpp  llama_config_reader.cpp  weight_loading.cpp  weight_loading.hpp
src/chat_template/: chat_template.cpp
src/gguf/: gguf_dequantize.cpp  gguf_dequantize.hpp  gguf_model_loader.cpp  gguf_model_loader.hpp  gguf_reader.cpp
src/json/: json_value.hpp
src/safetensors/: json_value.cpp  json_value.hpp  safetensors_reader.cpp
src/tokenizer/: tokenizer.cpp  tokenizer_config.cpp
tests/: CMakeLists.txt  test_architecture_registry.cpp  test_chat_template.cpp  test_gguf_dequantize.cpp  test_gguf_model_loader.cpp  test_gguf_reader.cpp  test_gpt_architecture.cpp  test_llama_architecture.cpp  test_llama_config_reader.cpp  test_model.cpp  test_safetensors_reader.cpp  test_smoke.cpp  test_tokenizer.cpp
tests/fixtures/: NOTICE.md  generate_gpt_test_fixture.py  generate_llama_bf16_test_fixture.py  generate_llama_test_fixture.py  generate_test_gguf.py  generate_test_safetensors.py  generate_tiny_gguf_model.py  generate_tiny_llama_model_fixture.py  gpt_test_weights.safetensors  llama_test_weights.safetensors  llama_test_weights_bf16.safetensors  test_tensors.gguf  test_tensors.safetensors  tiny_gguf_model.gguf
tests/fixtures/tiny_llama_model/: config.json  model.safetensors  tokenizer.json
